--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "dotenv": "^16.3.1",
     "element-react": "^1.4.34",
     "element-theme-default": "^1.4.13",
+    "firebase": "^10.11.0",
     "framer-motion": "^10.17.9",
+    "google-map-react": "^2.2.1",
     "howler": "^2.2.3",
     "mdb-react-ui-kit": "^6.0.0",
     "pure-react-carousel": "^1.30.1",
@@ -36,9 +38,10 @@
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.8.1",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-toastify": "^10.0.5",
     "reactstrap": "^9.1.6",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
